--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
 		"react-native-elements": "^0.17.0",
-		"react-native-vector-icons": "^4.4.2"
+		"react-native-vector-icons": "^4.4.2",
+		"react-navigation": "^1.0.0-beta.17"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
