--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
+		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.17"
