--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
 		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
+		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.17"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
+		"babel-preset-stage-0": "^6.24.1",
 		"eslint-config-rallycoding": "^3.2.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-beta.5"
