--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-native-elements": "^0.17.0",
 		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.21"
+		"react-navigation": "^1.0.0-beta.21",
+		"realm": "^2.1.1"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
