--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
 		"react-native": "0.49.1",
 		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
+		"react-native-grid-component": "^1.0.7",
 		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.17"
+		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
