--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.49.1",
     "react-native-calendars": "^1.15.0",
     "react-native-elements": "^0.17.0",
+    "react-native-push-notification": "^3.0.2",
     "react-native-push-notifications": "^3.0.10",
     "react-native-storage-wrapper": "^0.1.0",
     "react-native-vector-icons": "^4.4.2",
