--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"react-native": "0.49.1",
 		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
+		"react-native-fetch-blob": "^0.10.8",
 		"react-native-grid-component": "^1.0.7",
-		"react-native-storage-wrapper": "^0.1.0",
+		"react-native-pdf": "^3.0.0-alpha",
 		"react-native-push-notification": "^3.0.2",
 		"react-native-push-notifications": "^3.0.10",
+		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-swipeout": "^2.3.3",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21",
