--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"babel-preset-stage-2": "^6.24.1",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
+		"react-native-audio": "^3.5.1",
 		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
 		"react-native-grid-component": "^1.0.7",
-		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-push-notification": "^3.0.2",
 		"react-native-push-notifications": "^3.0.10",
+		"react-native-sound": "^0.10.4",
+		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-swipeout": "^2.3.3",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21",
