--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
 		"react-native-elements": "^0.17.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-grid-component": "^1.0.7",
+		"react-native-onesignal": "^3.0.7",
+		"react-native-pdf": "^3.0.0-alpha",
 		"react-native-push-notification": "^3.0.2",
 		"react-native-push-notifications": "^3.0.10",
 		"react-native-sound": "^0.10.4",
-		"react-native-pdf": "^3.0.0-alpha",
 		"react-native-storage-wrapper": "^0.1.0",
 		"react-native-swipeout": "^2.3.3",
 		"react-native-vector-icons": "^4.4.3",
