--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,5 +36,6 @@ android {
 
 dependencies {
     ...
-    compile project(':react-native-onesignal')
+    compile project(':react-native-onesignal,
+    compile project(':react-native-calendar-events')
 }
