--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-2": "^6.24.1",
+		"moment": "^2.20.1",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
+		"react-native-add-calendar-event": "^0.3.0",
 		"react-native-audio": "^3.5.1",
+		"react-native-calendar-events": "^1.4.3",
 		"react-native-calendars": "^1.15.0",
 		"react-native-elements": "^0.17.0",
 		"react-native-fetch-blob": "^0.10.8",
