--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-contacts-wrapper')
+    compile project(':react-native-contacts')
     compile project(':react-native-add-calendar-event')
     compile project(':react-native-onesignal')
     compile project(':react-native-calendar-events')
@@ -147,7 +149,8 @@ dependencies {
     compile project(':react-native-push-notifications')
     compile project(':react-native-push-notification')
     compile project(':realm')
-    compile project(':react-native-vector-icons')
+    compile project(':react-native-vector-icons
+    compile project(':react-native-contacts-wrapper')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
