--- a/ios/ryanTest/Info.plist
+++ b/ios/ryanTest/Info.plist
@@ -37,8 +37,10 @@
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app requires access to the calendar</string>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires access to the calendar</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
