--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.1",
 		"react-native-add-calendar-event": "^0.3.0",
+		"react-native-addressbook": "^1.3.0",
 		"react-native-audio": "^3.5.1",
 		"react-native-calendar-events": "^1.4.3",
 		"react-native-calendars": "^1.15.0",
+		"react-native-contacts": "^2.1.1",
+		"react-native-contacts-wrapper": "^0.2.4",
 		"react-native-elements": "^0.17.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-grid-component": "^1.0.7",
