--- a/ios/ryanTest/Info.plist
+++ b/ios/ryanTest/Info.plist
@@ -24,11 +24,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSExceptionDomains</key>
-		<dict/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsArbitraryLoadsInWebContent</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 	</dict>
+
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app requires access to the calendar</string>
 	<key>NSContactsUsageDescription</key>
