--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-native-elements": "^0.17.0",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-grid-component": "^1.0.7",
+		"react-native-list-view-select": "^1.0.4",
 		"react-native-onesignal": "^3.0.7",
 		"react-native-pdf": "^3.0.0-alpha",
 		"react-native-push-notification": "^3.0.2",
